--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@ minimal_mistakes_skin    : "haxor" # "air", "aqua", "contrast", "dark", "dirt", 
 
 # Site Settings
 locale                   : "en-US"
-title                    : "H4ckNet | Ciberseguridad y Hacking Ético"
+title                    : "Cyber4rlekiing | Ciberseguridad"
 title_separator          : "-"
-name                     : "S4vitar"
-description              : "Artículos sobre ciberseguridad, CTFs e investigaciones"
-url                      : "https://s4vitar.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : "4rlekiing"
+description              : "Artículos sobre ciberseguridad e investigaciones"
+url                      : "https://4rleki-ing.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "s4vitar/s4vitar.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "4rleki-ing/4rleki-ing.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 #logo                     : "/assets/images/masthead.png"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs              : true # true, false (default)
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "S4vitar"
   avatar           : "/assets/images/avatar.png"
-  bio              : "CyberSecurity Analyst at ElevenPaths / OSCP / OSWP / eWPTxv2 / eJPT / eCPPTv2 / CPHE / CHEE"
+  bio              : "Bug Hunter"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
@@ -112,23 +112,23 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "s4vitar"
+  github           : "4rlekiing"
   gitlab           :
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "s4vitar" # (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
+  linkedin         : "" # (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
-  twitter          : "s4vitar"
+  twitter          : ""
   vine             :
   weibo            :
   xing             :
-  youtube          : "https://youtube.com/c/s4vitar"
+  youtube          : ""
 
 
 # Reading Files
